--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -7,6 +7,7 @@
     border-radius: 4px;
     font-size: 1.6rem;
     font-weight: 700;
+    font-family: 'ProximaNova', sans-serif;
     cursor: pointer;
     background-color: var(--white);
     border: 1px solid transparent;
@@ -28,7 +29,9 @@
 }
 
 .icon {
-    font-size: 1.6rem;
+    display: inline-block;
+    width: 20px;
+    text-align: center;
 }
 
 //Button types
